--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "lmx"
+description = "Toy tool for quering values of XML file."
+authors = ["Bogdan Daragan"]
 version = "0.1.0"
 edition = "2021"
 
